--- a/localisation/ger_events_l_english.yml
+++ b/localisation/ger_events_l_english.yml
@@ -5,7 +5,7 @@
  prussia.2.a:0 "북독일 연방 만세!"
  prussia.2.b:0 "재통일은 해답이 아니다!"
  prussia.17.t:0 "새로운 총통!" 
- prussia.17.d:0 "우리는 단결했습니다! 우리는 다시 강해졌습니다! 이제 우리의 새로운 지도자인 독일 국민의 지도자를 선택해야 할 때이다. 카이져 빌헬름 2세는 늙었기 때문에, 그는 그 규칙을 따를 수 없습니다. 현재 프로이센에서 가장 인기 있는 두 정치인은 빌헬름 3세와 헤르만 괴링입니다."
+ prussia.17.d:0 "우리는 단결했습니다! 우리는 다시 강해졌습니다! 이제 우리의 새로운 지도자인 독일 국민의 지도자를 선택해야 할 때입니다. 카이저 빌헬름 2세는 늙었기 때문에, 그는 그 규칙을 따를 수 없습니다. 현재 프로이센에서 가장 인기 있는 두 정치인은 빌헬름 3세와 헤르만 괴링입니다."
  prussia.17.a:0 "카이저 빌헬름 III"
  prussia.17.b:0 "헤르만 괴링"
  prussia.3.t:0 "독일이 자르를 요구하다"
@@ -102,7 +102,7 @@
  prussia.10012.a:0 "독일에 합류하라."
  prussia.10012.b:0 "저항하라!"
  prussia.10013.t:0 "제2차 세계 대전!"
- prussia.10013.d:0 "오늘 아침, 독일군은 알자스-로렌, 독일어로는 엘사스-로트링겐으로 알려진 지역을 되찾기 위해 프랑스-독일 국경을 넘었습니다. 이 영토는 독일과 프랑스 소수민족이 둘 다 거주한다는 이유로 뜨거운 경쟁을 벌이고 있으며, 독일과 프랑스 사이에 수없이 주인이 바뀌었습니다./n이 갈등의 결과는 불분명합니다. 프랑스는 마지노선으로 안전하지만 독일은 저지대 국가들, 또는 스위스까지 밀고 들어갈 수도 있습니다. 하나는 확실합니다: 이 분쟁의 승자는 앞으로 수세기 동안 유럽의 미래를 형성할 것입니다. : 독일의 응답: 모든 독일인들은 우리의 카이져 밑에서 단결할 것이다! 승리를 향하여! 프랑스의 응답: 우리는 지난 대전에서 이 훈족 놈들을 물리쳤고, 또다시 그들을 물리칠 것이다! 프랑스는 무너지지 않을 것이다!"
+ prussia.10013.d:0 "오늘 아침, 독일군은 알자스-로렌, 독일어로는 엘사스-로트링겐으로 알려진 지역을 되찾기 위해 프랑스-독일 국경을 넘었습니다. 이 영토는 독일과 프랑스 소수민족이 둘 다 거주한다는 이유로 뜨거운 경쟁을 벌이고 있으며, 독일과 프랑스 사이에 수없이 주인이 바뀌었습니다./n이 갈등의 결과는 불분명합니다. 프랑스는 마지노선으로 안전하지만 독일은 저지대 국가들, 또는 스위스까지 밀고 들어갈 수도 있습니다. 하나는 확실합니다: 이 분쟁의 승자는 앞으로 수세기 동안 유럽의 미래를 형성할 것입니다. : 독일의 응답: 모든 독일인들은 우리의 카이저 밑에서 단결할 것이다! 승리를 향하여! 프랑스의 응답: 우리는 지난 대전에서 이 훈족 놈들을 물리쳤고, 또다시 그들을 물리칠 것이다! 프랑스는 무너지지 않을 것이다!"
  prussia.10013.a:0 "하느님이 우리 편이시기를 빈다!"
  prussia.10013.b:0 "유럽은 점점 뜨거워지고 있다."
  prussia.10014.t:0 "러시아의 결정"
