--- a/localisation/ger_focus_l_english.yml
+++ b/localisation/ger_focus_l_english.yml
@@ -153,7 +153,7 @@
  GER_question_kaiser:0 "입헌군주제 형성"
  GER_question_kaiser_desc:0 "카이저는 항상 독일 역사의 일부였고, 그의 위엄은 대체될 수 없습니다. 그러나 우리는 정권을 자유화시키면서도 위대한 지도자를 그의 왕좌에 계속 둘 수 있는 입헌군주제를 확립할 수 있습니다."
  GER_absolute_kaiser:0 "카이저에게 권력을"
- GER_absolute_kaiser_desc:0 "이전보다 상황이 안정되었고 통일을 이루었으니, 이제는 우리가 직접 카이저에게 권력을 돌려줄 때입니다. 카이져 만세!"
+ GER_absolute_kaiser_desc:0 "이전보다 상황이 안정되었고 통일을 이루었으니, 이제는 우리가 직접 카이저에게 권력을 돌려줄 때입니다. 카이저 만세!"
  GER_promote_junkers:0 "융커 촉진"
  GER_promote_junkers_desc:0 "융커를 촉진하는 것은 그들이 우리 산업과 경제를 후원할 것이기 때문에 중요합니다. 그들의 부를 통해 우리는 우리의 노력을 강화할 수 있을 것입니다."
  GER_promote_paramilitary:0 "SR"
@@ -167,9 +167,9 @@
  GER_align_ROM:0 "루마니아 제휴"
  GER_align_ROM_desc:0 "루마니아는 발칸에서 가장 강한 나라 중 하나입니다. 그들은 많은 양의 석유를 보유하고 있습니다. 그들과 파트너십을 맺으면 우리는 그들에게서 더 많은 자원을 구입할 수 있고 미국과 서부 연합에 덜 의존할 수 있습니다."
  GER_dissolve_kaiser:0 "공화주의"
- GER_dissolve_kaiser_desc:0 "완전한 민주주의를 채택하려면 카이져의 퇴진을 강요해야 합니다. 그것이 우리가 모든 이가 평등한 진보적인 정권을 누리는 유일한 방법이기 때문입니다."
+ GER_dissolve_kaiser_desc:0 "완전한 민주주의를 채택하려면 카이저의 퇴진을 강요해야 합니다. 그것이 우리가 모든 이가 평등한 진보적인 정권을 누리는 유일한 방법이기 때문입니다."
  GER_dissolve_nobility:0 "귀족 해체"
- GER_dissolve_nobility_desc:0 "카이져의 퇴위로, 우리는 모두에게 평등과 자유를 제공하는 것이 중요합니다. 이것으로 우리는 귀족들이 우리 정부에 머무르는 것을 허락할 수 없습니다."
+ GER_dissolve_nobility_desc:0 "카이저의 퇴위로, 우리는 모두에게 평등과 자유를 제공하는 것이 중요합니다. 이것으로 우리는 귀족들이 우리 정부에 머무르는 것을 허락할 수 없습니다."
  GER_motorization:0 "차량화"
  GER_motorization_desc:0 "전격전과 같은 새로운 전술의 주력은 당연히 차량화부대입니다. 그 부대들은 대체될 수 없기 때문에 우리는 차량화부대가 부족하지 않도록 해야 합니다."
  GER_krupp_deal:0 "크루프와 거래"
