--- a/localisation/ger_ideas_l_english.yml
+++ b/localisation/ger_ideas_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
-  GER_wilhelm_II:0 "카이저 빌헬름 II"
-  GER_wilhelm_III:0 "황태자 빌헬름 III"
+  GER_wilhelm_II:0 "카이저 빌헬름 2세"
+  GER_wilhelm_III:0 "황태자 빌헬름 3세"
   GER_idea_nationalism:0 "독일 민족주의"
   GER_passive_army:0 "방위군"
   GER_german_paramilitarism:0 "흑색 국가방위군"
