--- a/localisation/ita_events_l_english.yml
+++ b/localisation/ita_events_l_english.yml
@@ -18,11 +18,11 @@
  italy.1004.c:0 "공산주의자들과 함께하라!"
  italy.1006.t:0 "불가침조약을 위한 코소보"
  italy.1006.d:0 "Italian government has approached us with a proposition. It is clear that they want our land, perhaps if we accept to their demands and cede Kosovo to Italy we might avoid full-on conflict with a major power. This non-aggression will buy us more time to prepare...\nWhat can possibly go wrong?"
- italy.1006.a:0 "Agree to the Treaty"
+ italy.1006.a:0 "조약에 동의하라."
  italy.1006.b:0 "절대 안 돼!"
  italy.1007.t:0 "세르비아가 받아들이다"
  italy.1007.d:0 "Serbia has accepted our proposition, we shall now occupy Albanian regions of Kosovo and establish our protectorate.\n This treaty also included a temporary non-aggression pact. We can no longer invade Serbia for time of the treaty."
- italy.1007.a:0 "Good"
+ italy.1007.a:0 "좋아."
  italy.1008.t:0 "세르비아가 거부하다"
  italy.1008.d:0 "Serbia has declined our offer. This only means, they are hostile to our regime and our claims. We shall prepare for immidiate intervention.\n군대 동원을 시작하라..."
  italy.1008.a:0 "This might not end will for Serbia"
@@ -48,15 +48,15 @@
  italy.1014.t:0 "Mussolini Gathers His Supporters"
  italy.1014.d:0 "The recent Mussolini's speech has gained a lot of support from the population. The Fascist party's popularity is at all time high. This could endanger our stability and economic situation.\nWe must keep an eye on him."
  italy.1014.a:0 "Sure we will"
- italy.1015.t:0 "A Solution to the Problem"
+ italy.1015.t:0 "문제에 대한 해결책"
  italy.1015.d:0 "Following Mussolini's escape from the prison, Benito went into hiding. We could use this opportunity to make it look like a weakness.\nWe could bribe some of the party members to put them again their leader. Perhaps we will even get an opportunity to stage an accident."
  italy.1015.a:0 "Sounds like a good idea"
  italy.1015.b:0 "We shouldn't waste our money on this"
  italy.1016.t:0 "Assassination of Benito Mussolini"
  italy.1016.d:0 "With our help from within, we now have a shot at Benito Mussolini. We could use this opportunity to take out the fascist leader and eliminate the threat of an uprising by the blackshirts.\nHow should we act?"
- italy.1016.a:0 "Take him out!"
- italy.1016.b:0 "It's too risky"
- italy.1017.t:0 "Mussolini found dead"
+ italy.1016.a:0 "그를 처리해!"
+ italy.1016.b:0 "너무 위험하다."
+ italy.1017.t:0 "무솔리니가 죽은 채로 발견되다"
  italy.1017.d:0 "It seems like the luck is on our side. Benito Mussolini, the leader of the fascist party was found dead. Further investigation showed that he was murdered by his own co-consirators.\nBenito has recently escaped from prison and went into hiding. Perhaps his supporters thought of this as a sign of weakness and decided that he can no longer lead them."
  italy.1017.a:0 "훌륭한 소식이다."
  italy.1018.t:0 "검은 셔츠단의 봉기"
@@ -65,29 +65,29 @@
  italy.1018.b:0 "We need The King on our side!"
  italy.10000.t:0 "Italy offers to purchase our tanks"
  italy.10000.d:0 "Our ally Italy is offering as to purchase our older tanks as their army is still under its rearmament phase."
- italy.10000.a:0 "Approve the deal"
- italy.10000.b:0 "No Deal"
+ italy.10000.a:0 "거래를 승인한다."
+ italy.10000.b:0 "거래는 없다."
  italy.10001.t:0 "France approves the deal"
  italy.10001.d:0 "France has accepted our proposal for tank purchase, these units shall be immidiately added to our stockpile."
- italy.10001.a:0 "Great"
+ italy.10001.a:0 "훌륭해."
  italy.10002.t:0 "France refuses to sell us their tanks"
  italy.10002.d:0 "France has declined our proposal for tank purchase. Looks like we will have to build them ourselves..."
  italy.10002.a:0 "Not so great..."
  italy.10003.t:0 "Italy offers to purchase our ships"
  italy.10003.d:0 "Our ally Italy is offering as to purchase our older vessles as their navy is still under its rearmament phase."
- italy.10003.a:0 "Approve the deal"
- italy.10003.b:0 "No Deal"
+ italy.10003.a:0 "거래를 승인한다."
+ italy.10003.b:0 "거래는 없다."
  italy.10004.t:0 "The UK approves the deal"
  italy.10004.d:0 "The United Kingdom has accepted our proposal for ship purchase, these units shall be immidiately added to our stockpile."
- italy.10004.a:0 "Great"
+ italy.10004.a:0 "훌륭해."
  italy.10005.t:0 "The United Kingdom refuses to sell us their ships"
  italy.10005.d:0 "The United Kingdom has declined our proposal for tank purchase. Looks like we will have to build them ourselves..."
  italy.10005.a:0 "Not so great..."
  italy.10006.t:0 "Status of the Monarchy"
  italy.10006.d:0 "As a progressive democratic state, we believe that monarchy as an ideology is an outdated one with many flaws.\nIf we want to achieve our most stable and prosperous state, we must abandon it."
  italy.10006.a:0 "A Constitutional monarchy will do"
- italy.10006.b:0 "The King must abdicate"
- italy.10007.t:0 "Italian King abdicates"
+ italy.10006.b:0 "왕은 퇴위해야 한다."
+ italy.10007.t:0 "이탈리아 국왕의 퇴위"
  italy.10007.d:0 "A new Italian Republic was formed.\nIt was annouced yesterday that the King of Italy abdicated in favour of the Republican state of Italy. Only time will tell whether this is beneficial for the Italian state."
  italy.10007.a:0 "흥미롭군."
  italy.10007.b:0 "흥미롭군."
@@ -108,11 +108,11 @@
  italy.363.d:0 "이탈리아인들은 우리에게 전쟁 중에 그들의 희생을 더 외교적으로 인정한다면(그들이 우리를 더 많이 활용할 수 있는 힘을 갖게 될 것이다) 그들은 우리에게 그들의 해군 생산량의 절반을 줄 것이라고 주장해왔습니다."
  italy.363.a:0 "더 많은 선박이라고? 확인서를 즉시 보내라!"
  italy.363.b:0 "우리는 이탈리아인들에게 더 많은 정치적 영향력을 허용할 수 없다."
- italy.353.t:0 "Italians offer to finish the Cape to Cairo Rail Link"
- italy.353.d:0 "The Cape to Cairo, a proposal made to simplify imperial administration has, since it's beginning, seen endless delays. The programme was finally made possible with the end of the great war, seeing the transfer of German territories and thus allowing a contigous, red line down the continent. Unfortunately, actually filling the railway gap has proved an issue. Gauge, rainforest, desert, all throw up huge barriers to the project. Until now, anyways. The Italian government, flush with funding in it's recent economic boom, has offered to foot the bill of a completion of a railway from Cape Town to Cairo, linking the gaps, and standardising the entire line's rolling stock and gauge. Of course, this comes with distasteful, political strings attached. It would allow us to integrate Egypt, however."
- italy.353.a:0 "We would be mad to refuse!"
- italy.353.b:0 "Blatent bribery."
- italy.365.t:0 "Transfer of the Horn"
- italy.365.d:0 "Italy has come to us, offering to transfer the Horn of Africa. Though of little practical use, the territory undoubtably could be used against us if Italy were to turn unfriendly, and by securing it we further entrench ourselves on the dark continent."
+ italy.353.t:0 "이탈리아인들이 케이프 카이로 철도 완공을 제안하다"
+ italy.353.d:0 "제국 행정을 간소화하자는 제안으로부터 나온 케이프 카이로 철도는 시작부터 끊임없이 지연되고 있습니다. 이 계획은 대전 이후 독일 영토의 이전을 통해 아프리카 대륙에 영국의 붉은 종단선을 그으면서 가능해졌습니다. 불행히도, 실제로 철도의 공백을 메우는 것은 문제가 되었습니다. 궤간, 열대우림, 사막 등 모두 이 계획에 큰 장애가 됩니다. 어쨌든 지금까지는 그랬습니다. 이탈리아 정부는 최근 경제 호황에 자금 지원을 아끼지 않고 케이프 타운에서 카이로까지 가는 철도의 완공에 대한 비용을 지불하고, 그 틈새를 연결하며, 전 노선의 굴곡진 재고와 궤간을 표준화하겠다고 제안했습니다. 물론, 이 제안은 혐오스럽고 정치적인 조건과 함께 왔습니다. 그러나 이는 우리가 이집트를 통합할 수 있게 해줄 것입니다."
+ italy.353.a:0 "우리가 미쳤다고 이를 거절하겠나!"
+ italy.353.b:0 "노골적인 뇌물이다."
+ italy.365.t:0 "뿔 지역의 이전"
+ italy.365.d:0 "이탈리아가 우리에게 아프리카의 뿔 지역을 이전하겠다고 제안했습니다. 비록 실용적이지는 않지만, 이탈리아가 불친절하게 변한다면 틀림없이 그 영토는 우리에게 불리하게 사용될 수 있을 것이고, 그 지역을 확보함으로써 우리는 어두운 대륙에 더욱 단단히 자리잡을 것입니다."
  italy.365.a:0 "물론이다."
- italy.365.b:0 "We would be left in the Itallian's debt once again."
+ italy.365.b:0 "우리는 다시 한 번 이탈리아인의 빚에 남게 될 것이다."
