--- a/localisation/replace/INOT_replace_l_english.yml
+++ b/localisation/replace/INOT_replace_l_english.yml
@@ -50,4 +50,83 @@
  news.155.t:0 "독일의 전쟁 재개"
  news.155.d:0 "많은 사람들이 유럽의 평화를 바라고 있었지만, 최근 일련의 사건을 통해 독일은 다시 전쟁의 길을 걷기 시작했습니다."
  news.155.a:0 "이것은 또 다른 대전쟁의 시작이 될 것이다"
- news.155.b:0 "독일 국민국가의 영광을 위해!"
+ news.155.b:0 "독일의 영광을 위해!"
+
+## music_I_english
+ maintheme:0 "하느님이여, 차르를 지켜주소서! (God save the Tsar)"
+ #Russia
+ rus_peace_1:0 "러시아인의 기도 (Prayer of the Russian People)"
+ rus_peace_2:0 "프레오브라젠스키 행진곡 (Preobrazhensky March)"
+ rus_peace_3:0 "검은 눈의 코사크 소녀 (Dark-eyed Cossack-girl)"
+ rus_peace_4:0 "쿠반 연대 행진곡 (Kuban Regiment March)"
+ rus_peace_5:0 "볼가강의 뱃노래 (Song of the Volga Boatmen)"
+ rus_peace_6:0 "Cap Song"
+ rus_peace_7:0 "The Clouds of Shipka"
+ rus_peace_8:0 "코로베이니키 (Korobeiniki)"
+ rus_peace_9:0 "Stenka Razin"
+ rus_peace_10:0 "My Beloved Country"
+ rus_war_1:0 "People's Avengers"
+ rus_war_2:0 "Yablochko"
+ rus_war_3:0 "슬라브 여인의 작별 (Slavianka)"
+ rus_war_4:0 "March of the Siberian Rifles"
+ rus_war_5:0 "초원 (Polyushka Polye)"
+ rus_war_6:0 "The Thunder of Victory"
+ rus_war_7:0 "타찬카 (Tachanka)"
+ rus_war_8:0 "In the Garden"
+ rus_war_9:0 "카츄샤 (Katyusha)"
+ rus_war_10:0 "새키얘르벤 폴카 (Säkkijärven Polkka)" 
+ #Soviet
+ sov_peace_1:0 "모스크바의 밤 (Moscow Nights)"
+ sov_peace_2:0 "소비에트 왈츠 (Soviet Waltz)"
+ sov_peace_3:0 "The Cliff"
+ sov_peace_4:0 "Evening Bell"
+ sov_peace_5:0 "Nightingale"
+ sov_peace_6:0 "The Patriotic Song"
+ sov_peace_7:0 "Piloty"
+ sov_peace_8:0 "Bombers"
+ sov_peace_9:0 "Along the Peterskaia"
+ sov_peace_10:0 "소련 국가 (Anthem of the USSR)"
+ sov_war_1:0 "성전 (The Sacred War)"
+ sov_war_2:0 "My Army"
+ sov_war_3:0 "We are the Army of the People"
+ sov_war_4:0 "Song of the Soldiers"
+ sov_war_5:0 "초원 (Polyushka Polye)"
+ sov_war_6:0 "카츄샤 (Katyusha)"
+ sov_war_7:0 "March of the Red Cavalry"
+ sov_war_8:0 "Tankers' March"
+ sov_war_9:0 "Unified Victory"
+ sov_war_10:0 "March of the Guards' Mortarmen"
+ #Germany and Austria Peace
+ ger_peace_1:0 "마왕 (Erlkönig)"
+ ger_peace_2:0 "경기병 서곡 (Leichte Kavallerie Overture)"
+ ger_peace_3:0 "아름답고 푸른 도나우 (An Der Schönen Blauen Donau)"
+ ger_peace_4:0 "환희의 송가 (Ode an die Freude)"
+ ger_peace_5:0 "베토벤 교향곡 7번 2악장 (Havok)"
+ ger_peace_6:0 "월광 소나타 (Moonlight Sonata)"
+ ger_peace_7:0 "사라반드 (Sarabande)"
+ ger_peace_8:0 "발퀴레의 기승 (Ride of the Valkyries)"
+ ger_peace_9:0 "토카타와 푸가 (Toccata et Fugue)"
+ ger_peace_10:0 "라크리모사 (Lacrimosa)"
+ ger_peace_11:0 "아베 마리아 (Ave Maria)"
+ #Germany War
+ ger_war_1:0 "프로이센의 영광 (Preußens Gloria)"
+ ger_war_2:0 "서쪽숲의 노래 (Westerwaldlied)"
+ ger_war_3:0 "라인 강의 파수꾼 (Die Wacht am Rhein)"
+ ger_war_4:0 "기갑가 (Panzerlied)"
+ ger_war_5:0 "쾨니히그레츠 행진곡 (Königgrätzer Marsch)"
+ ger_war_6:0 "파리 입성 행진곡 (Pariser Einzugsmarsch)"
+ ger_war_7:0 "십자군 팡파르 (Kreuzritter-fanfare)"
+ ger_war_8:0 "데필리어 행진곡 (Defiliermarsch)"
+ ger_war_9:0 "오랜 전우들 (Alte Kameraden)"
+ ger_war_10:0 "우리는 마다가스카르 앞에 있었다 (Wir lagen vor Madagaskar)"
+ #Austria War
+ aus_war_1:0 "쌍독수리 아래에서 (Unter dem Doppeladler)"
+ aus_war_2:0 "라데츠키 행진곡 (Radetzky Marsch)"
+ aus_war_3:0 "제왕 행진곡 (K.U.K. Marsch)"
+ aus_war_4:0 "37연대 행진곡 (37er Regimentsmarsch)"
+ aus_war_5:0 "가블렌츠 행진곡 (Gablenz-Marsch)"
+ aus_war_6:0 "벨몬트 행진곡 (Bellmond-Marsch)"
+ aus_war_7:0 "헤센 행진곡 (Hessenmarsch)"
+ aus_war_8:0 "연대가 거리로 나갈 때 (Regiment sein Strassen zieht)"
+ aus_war_9:0 "헝가리 연대 (Ein Regiment von Ungarland)"
+ aus_war_10:0 "알프스엽병 행진곡 (Alpinjäger Marsch)"
