--- a/localisation/misc_l_english.yml
+++ b/localisation/misc_l_english.yml
@@ -26,4 +26,4 @@ rus_industrialization:0 "산업화 계획"
 rus_controlled_indus:0 "중앙집중화 계획"
 RUS_conservative_coalition_wins:0 "보수당 연합 승리"
 RUS_new_duma_elected:0 "새 두마 선출"
-usa_raises_militia:0 "§GUS National militia will rise...§!"
+usa_raises_militia:0 "§G미국 국가 민병대가 봉기할 것입니다...§!"
