--- a/localisation/replace/INOT_replace_l_english.yml
+++ b/localisation/replace/INOT_replace_l_english.yml
@@ -61,16 +61,16 @@
  rus_peace_4:0 "쿠반 연대 행진곡 (Kuban Regiment March)"
  rus_peace_5:0 "볼가강의 뱃노래 (Song of the Volga Boatmen)"
  rus_peace_6:0 "Cap Song"
- rus_peace_7:0 "The Clouds of Shipka"
+ rus_peace_7:0 "우리가 어떻게 쉽카의 구름 속에 서 있었는가 (The Clouds of Shipka)"
  rus_peace_8:0 "코로베이니키 (Korobeiniki)"
- rus_peace_9:0 "Stenka Razin"
- rus_peace_10:0 "My Beloved Country"
+ rus_peace_9:0 "스텐카 라진 (Stenka Razin)"
+ rus_peace_10:0 "내 사랑하는 나라 (My Beloved Country)"
  rus_war_1:0 "People's Avengers"
- rus_war_2:0 "Yablochko"
+ rus_war_2:0 "작은 사과 (Yablochko)"
  rus_war_3:0 "슬라브 여인의 작별 (Slavianka)"
- rus_war_4:0 "March of the Siberian Rifles"
+ rus_war_4:0 "시베리아 소총병 행진곡 (March of the Siberian Rifles)"
  rus_war_5:0 "초원 (Polyushka Polye)"
- rus_war_6:0 "The Thunder of Victory"
+ rus_war_6:0 "승리의 천둥이 울려 퍼지게 하라! (The Thunder of Victory)"
  rus_war_7:0 "타찬카 (Tachanka)"
  rus_war_8:0 "In the Garden"
  rus_war_9:0 "카츄샤 (Katyusha)"
