--- a/localisation/rus_focus_l_english.yml
+++ b/localisation/rus_focus_l_english.yml
@@ -137,8 +137,8 @@
  RUS_war_UK_desc:0 "영국은 여전히 그들이 세계 최대 강국이라고 믿고 있습니다. 우리는 그들이 약하고 무너지는 제국임을 세계에 보여주고 힘의 균형을 우리 편으로 옮겨야 합니다."
  RUS_support_USAnazi:0 "아메리카 연합국 지원"
  RUS_support_USAnazi_desc:0 "미국은 내전으로 다시 불타올랐습니다. 그들이 처음으로 내전에 참전했을 때, 우리는 남부 연합을 돕기를 거부했습니다. 이번에는 그들을 도울 것입니다."
- RUS_help_CHN:0 "청나라와의 친선"
- RUS_help_CHN_desc:0 "청나라는 일본과 전쟁을 벌이고 있습니다. 우리는 향후 일본 침공을 더 쉽게 할 뿐만 아니라 일본의 팽창을 더욱 늦추기 위해 청나라 정부에 공식 지원을 할 필요가 있습니다."
+ RUS_help_CHN:0 "청과의 친선"
+ RUS_help_CHN_desc:0 "청은 일본과 전쟁을 벌이고 있습니다. 우리는 향후 일본 침공을 더 쉽게 할 뿐만 아니라 일본의 팽창을 더욱 늦추기 위해 청나라 정부에 공식 지원을 할 필요가 있습니다."
  RUS_claim_Sakhalin:0 "동방에서의 입지 강화"
  RUS_claim_Sakhalin_desc:0 "남부 사할린과 포트 아서는 러일 전쟁에서 상실되었습니다. 러시아인들은 여전히 사할린 섬의 남반부에 거주합니다. 우리는 이 땅을 되찾고 이 억압받는 러시아인들을 그들의 조국과 결속시켜야 합니다!"
  RUS_carrier_effort:0 "바다의 제왕"
@@ -214,7 +214,7 @@
  RUS_greater_russia:0 "제3의 로마"
  RUS_greater_russia_desc:0 "러시아는 강대국입니다, 이는 사실이지만 우리는 더 위대해질 수 있습니다. 많은 정교회 사람들은 우리의 제2의 도시 모스크바를 제3의 로마라고 불렀습니다. 로마는 분명히 로마 제국의 수도였고, 로마 제국은 초강대국이었습니다. 우리는 다음 로마 제국이 될 것입니다."
  RUS_inv_CHI:0 "중러 동맹"
- RUS_inv_CHI_desc:0 "청나라는 현재 일본으로부터 위협을 받고 있습니다. 우리가 그들을 보호한다면, 그것은 일본인들이 공격하기 전에 재고하게 만들 것입니다. 제안서를 보내야 합니다."
+ RUS_inv_CHI_desc:0 "청은 현재 일본으로부터 위협을 받고 있습니다. 우리가 그들을 보호한다면, 그것은 일본인들이 공격하기 전에 재고하게 만들 것입니다. 제안서를 보내야 합니다."
  RUS_treaty_JAP:0 "일본과의 평화"
  RUS_treaty_JAP_desc:0 "일본제국이 강대국으로 떠올랐습니다. 그들은 시베리아에 있는 우리의 노출된 땅을 쉽게 장악할 수 있습니다. 아마도 우리는 그들과 동맹을 맺고 러-일 불가침조약의 대가로 모든 동부 영토의 소유권 주장을 없애는 조약을 제안해야 할 것입니다."
  RUS_release_sakhalin:0 "사할린 할양"
