--- a/localisation/chi_ideas_l_english.yml
+++ b/localisation/chi_ideas_l_english.yml
@@ -1,55 +1,55 @@
 ﻿l_english:
- CHI_dictatorship_idea:0 "Authorian Rule" 
- CHI_risk_of_famine:0 "Low Food Supply"
- CHI_risk_of_famine_desc:0 "Years of war take their toll on the country. While the biggest cities are under secure control of the Kuomintang outside of the cities the influence of the party is limited. The countryside lacks adminstration and suffers from lacking support of the party and government. Because of this the food supply to the major cities has become tight and bandit groups and communist rebels are able to rampage the countryside with almost no opposition."
- CHI_risk_of_famine_1:0 "Low Food Supply"
- CHI_risk_of_famine_1_desc:0 "Years of war take their toll on the country. While the biggest cities are under secure control of the Kuomintang outside of the cities the influence of the party is limited. The countryside lacks adminstration and suffers from lacking support of the party and government. Because of this the food supply to the major cities has become tight and bandit groups and communist rebels are able to rampage the countryside with almost no opposition."
- CHI_risk_of_famine_2:0 "Low Food Supply"
- CHI_risk_of_famine_2_desc:0 "Years of war take their toll on the country. While the biggest cities are under secure control of the Kuomintang outside of the cities the influence of the party is limited. The countryside lacks adminstration and suffers from lacking support of the party and government. Because of this the food supply to the major cities has become tight and bandit groups and communist rebels are able to rampage the countryside with almost no opposition."
- CHI_risk_of_famine_3:0 "Low Food Supply"
- CHI_risk_of_famine_3_desc:0 "Years of war take their toll on the country. While the biggest cities are under secure control of the Kuomintang outside of the cities the influence of the party is limited. The countryside lacks adminstration and suffers from lacking support of the party and government. Because of this the food supply to the major cities has become tight and bandit groups and communist rebels are able to rampage the countryside with almost no opposition."
- CHI_risk_of_famine_4:0 "Low Food Supply"
- CHI_risk_of_famine_4_desc:0 "Years of war take their toll on the country. While the biggest cities are under secure control of the Kuomintang outside of the cities the influence of the party is limited. The countryside lacks adminstration and suffers from lacking support of the party and government. Because of this the food supply to the major cities has become tight and bandit groups and communist rebels are able to rampage the countryside with almost no opposition."
- CHI_risk_of_famine_5:0 "Low Food Supply"
- CHI_risk_of_famine_5_desc:0 "Years of war take their toll on the country. While the biggest cities are under secure control of the Kuomintang outside of the cities the influence of the party is limited. The countryside lacks adminstration and suffers from lacking support of the party and government. Because of this the food supply to the major cities has become tight and bandit groups and communist rebels are able to rampage the countryside with almost no opposition."
- CHI_air_training:0 "RoC Air Force Academy"
- CHI_our_hour:0 "Our Hour"
+ CHI_dictatorship_idea:0 "권위주의 통치" 
+ CHI_risk_of_famine:0 "부족한 식량 공급"
+ CHI_risk_of_famine_desc:0 "수년간의 전쟁은 나라에 피해를 입힙니다. 대도시들이 국민당의 안전한 통제 하에 있는 반면, 도시 외곽에서는 당의 영향력이 제한적입니다. 농촌은 행정력이 부족하고 당과 정부의 지원이 부족하여 어려움을 겪고 있습니다. 이 때문에 주요 도시에 대한 식량 공급이 빠듯해졌고, 도적단이나 공산 반군들은 거의 아무런 반대도 없이 농촌을 약탈할 수 있게 되었습니다."
+ CHI_risk_of_famine_1:0 "부족한 식량 공급"
+ CHI_risk_of_famine_1_desc:0 "수년간의 전쟁은 나라에 피해를 입힙니다. 대도시들이 국민당의 안전한 통제 하에 있는 반면, 도시 외곽에서는 당의 영향력이 제한적입니다. 농촌은 행정력이 부족하고 당과 정부의 지원이 부족하여 어려움을 겪고 있습니다. 이 때문에 주요 도시에 대한 식량 공급이 빠듯해졌고, 도적단이나 공산 반군들은 거의 아무런 반대도 없이 농촌을 약탈할 수 있게 되었습니다."
+ CHI_risk_of_famine_2:0 "부족한 식량 공급"
+ CHI_risk_of_famine_2_desc:0 "수년간의 전쟁은 나라에 피해를 입힙니다. 대도시들이 국민당의 안전한 통제 하에 있는 반면, 도시 외곽에서는 당의 영향력이 제한적입니다. 농촌은 행정력이 부족하고 당과 정부의 지원이 부족하여 어려움을 겪고 있습니다. 이 때문에 주요 도시에 대한 식량 공급이 빠듯해졌고, 도적단이나 공산 반군들은 거의 아무런 반대도 없이 농촌을 약탈할 수 있게 되었습니다."
+ CHI_risk_of_famine_3:0 "부족한 식량 공급"
+ CHI_risk_of_famine_3_desc:0 "수년간의 전쟁은 나라에 피해를 입힙니다. 대도시들이 국민당의 안전한 통제 하에 있는 반면, 도시 외곽에서는 당의 영향력이 제한적입니다. 농촌은 행정력이 부족하고 당과 정부의 지원이 부족하여 어려움을 겪고 있습니다. 이 때문에 주요 도시에 대한 식량 공급이 빠듯해졌고, 도적단이나 공산 반군들은 거의 아무런 반대도 없이 농촌을 약탈할 수 있게 되었습니다."
+ CHI_risk_of_famine_4:0 "부족한 식량 공급"
+ CHI_risk_of_famine_4_desc:0 "수년간의 전쟁은 나라에 피해를 입힙니다. 대도시들이 국민당의 안전한 통제 하에 있는 반면, 도시 외곽에서는 당의 영향력이 제한적입니다. 농촌은 행정력이 부족하고 당과 정부의 지원이 부족하여 어려움을 겪고 있습니다. 이 때문에 주요 도시에 대한 식량 공급이 빠듯해졌고, 도적단이나 공산 반군들은 거의 아무런 반대도 없이 농촌을 약탈할 수 있게 되었습니다."
+ CHI_risk_of_famine_5:0 "부족한 식량 공급"
+ CHI_risk_of_famine_5_desc:0 "수년간의 전쟁은 나라에 피해를 입힙니다. 대도시들이 국민당의 안전한 통제 하에 있는 반면, 도시 외곽에서는 당의 영향력이 제한적입니다. 농촌은 행정력이 부족하고 당과 정부의 지원이 부족하여 어려움을 겪고 있습니다. 이 때문에 주요 도시에 대한 식량 공급이 빠듯해졌고, 도적단이나 공산 반군들은 거의 아무런 반대도 없이 농촌을 약탈할 수 있게 되었습니다."
+ CHI_air_training:0 "중화민국 공군군관학교"
+ CHI_our_hour:0 "한 시간"
 
 
 
 
 
- CHI_disjointed_gov:0 "Divided Government"
- CHI_partisans:0 "Secret Police"
- CHI_factory_strikes:0 "Factory Strikes" 
- CHI_special_forces:0 "Special Forces"
- CHI_destribute_land:0 "Destributed Land"
- CHI_colony_payment:0 "Land Payment"
- CHI_so_demo:0 "Socialist Democracy"
- CHI_se_police:0 "Better Reinforcements"
- CHI_anti_co:0 "Anti Communist Rules"
- CHI_reinforced_gov:0 "New Government"
- CHI_partisans:0 "Secret Police"
- CHI_army:0 "New Highcommand"
- CHI_new_labour:0 "New Labour"
- french_advisors:0 "French Advisors"
- russian_advisors:0 "Russian Advisors"
- german_advisors:0 "German Advisors"
- bavarian_advisors:0 "Bavarian Advisors"
- english_advisors:0 "British Advisors"
- CHI_edu_reform:0 "Education Reform"
- CHI_weapon_payment_eng:0 "Weapon Payments"
- CHI_weapon_payment:0 "Weapon Payments"
- CHI_absolut_control:0 "Absolute Control"
- CHI_unite_morale:0 "Wars for Unification"
- CHI_longer_workshifts:0 "Longer Workshifts"
- CHI_seized_assets:0 "Seized Assets"
- CHI_controlled_industry:0 "Controlled Industry"
- CHI_new_investors:0 "New Investors"
- CHI_payments:0 "Payments"
- CHI_true_peace:0 "Spirit of Freedom"
+ CHI_disjointed_gov:0 "분열된 정부"
+ CHI_partisans:0 "비밀경찰"
+ CHI_factory_strikes:0 "공장 파업" 
+ CHI_special_forces:0 "특수부대"
+ CHI_destribute_land:0 "분배된 토지"
+ CHI_colony_payment:0 "토지 대금"
+ CHI_so_demo:0 "사회주의 민주주의"
+ CHI_se_police:0 "더 나은 지원군"
+ CHI_anti_co:0 "반공 통치"
+ CHI_reinforced_gov:0 "신정부"
+ CHI_partisans:0 "비밀경찰"
+ CHI_army:0 "신군부"
+ CHI_new_labour:0 "신노동"
+ french_advisors:0 "프랑스 고문"
+ russian_advisors:0 "러시아 고문"
+ german_advisors:0 "독일 고문"
+ bavarian_advisors:0 "바이에른 고문"
+ english_advisors:0 "영국 고문"
+ CHI_edu_reform:0 "교육 개혁"
+ CHI_weapon_payment_eng:0 "무기 지불금"
+ CHI_weapon_payment:0 "무기 지불금"
+ CHI_absolut_control:0 "절대적 지배"
+ CHI_unite_morale:0 "통일전쟁"
+ CHI_longer_workshifts:0 "긴 근무시간"
+ CHI_seized_assets:0 "압류된 자산"
+ CHI_controlled_industry:0 "통제된 산업"
+ CHI_new_investors:0 "새 투자자"
+ CHI_payments:0 "지불금"
+ CHI_true_peace:0 "자유의 정신"
 
- CHI_yan_xishan:0 "Yan Xishan"
- CHI_long_yun:0 "Long Yun"
+ CHI_yan_xishan:0 "옌시산"
+ CHI_long_yun:0 "룽윈"
  
  
