--- a/localisation/chi_focus_l_english.yml
+++ b/localisation/chi_focus_l_english.yml
@@ -6,32 +6,32 @@
  CHI_begin_sea:0 "운송과 무역"
  CHI_begin_sea_desc:0 ""
  CHI_invite_military_members:0 "더 많은 군인들을 당에 초청"
- CHI_invite_military_members_desc:0 "The Kuomintang party has become a shell of what it wanted to be. Its memebers are discussing unnecessary reforms for the country rather then talking about how to unify this nation. We need some people in the parliament who now whats the best for the nation."
+ CHI_invite_military_members_desc:0 "국민당 당은 자신이 원하던 것의 껍데기가 되었습니다. 그 의원들은 국가를 위해 불필요한 개혁을 논의한 다음 이 나라를 어떻게 통일할 것인가에 대해 이야기하고 있습니다. 우리는 지금 국가를 위해 최선인 사람들이 의회에 필요합니다."
  CHI_restrict_the_party:0 "의회의 권한 제한"
- CHI_restrict_the_party_desc:0 "The parliament has become a disturbance for the Republic. It was immediatly established to fullfill the promises of democracy. But it was too early and many current members are inexperienced, capitalists or even worse... socialists. The parliament's power must be limited for the time China is non unified."
+ CHI_restrict_the_party_desc:0 "의회는 공화국의 폐혜가 되었습니다. 의회는 민주주의의 약속을 이행하기 위해 즉각적으로 수립되었습니다. 하지만 너무 빨랐고 많은 현재 의원들은 경험이 부족하거나 자본가이거나 심지어 더 나쁜... 사회주의자입니다. 중국의 통일이 안 되는 기간 동안 의회의 권력은 제한되어야 합니다."
  CHI_silence_the_left:0 "좌익 침묵시키기"
- CHI_silence_the_left_desc:0 "The demands of enacting new social reforms and the whipering of living standards in the country of the Left Wing are unbearable. They finally need to shut their mouth and realize in what situation the republic is in."
+ CHI_silence_the_left_desc:0 "새로운 사회 개혁을 제정해야 한다는 요구와 국가의 생활 수준을 향상시켜야 한다는 좌익의 요구는 견딜 수 없습니다. 그들은 마침내 입을 다물고 공화국이 어떤 상황에 처해 있는지 깨달아야 합니다."
  CHI_ban_members:0 "좌파 의원 금지"
- CHI_ban_members_desc:0 "After the so called "attacks" on the politicians of the left wing have been called out in the parliament and the accusations that the Director of the State Council Chiang Kai-Shek has been abusing his powers, the Left Wing went to far. They are a hinderance in rebuilding this nation and have no place in the party anymore."
+ CHI_ban_members_desc:0 "좌익 정치인에 대한 이른바 '공격'이 의회에서 불려나오고 장제스 국무원총리가 권력을 남용했다는 비난이 쏟아진 뒤 좌익이 도를 넘었습니다. 그들은 이 나라를 재건하는 데 방해가 되고 더 이상 당내에서 설 자리가 없습니다."
  CHI_purge_socialist_and_communist:0 "남은 사회주의자 숙청"
- CHI_purge_socialist_and_communist_desc:0 "The military has now finally took full control of the nation. The parliament will not be able to stop our actions neither will they even think about condemning us like when they did in the aftermath of the Shangai Massacre of 1930. With absolute power one of our long awaited obejectives will now be fullfilled. The completed destruction of communism in this Republic and the purging of any supporter."
+ CHI_purge_socialist_and_communist_desc:0 "군부가 마침내 국가를 완전히 장악했습니다. 의회는 우리의 행동을 멈출 수 없을 것입니다. 또한 그들은 1930년 상하이 대학살 후 그들이 했던 것처럼 우리를 비난할 생각도 하지 않을 것입니다. 절대 권력으로 오랫동안 기다려온 우리의 목표 중 하나가 이제 완성될 것입니다. 이 공화국의 공산주의의 완전한 파괴와 모든 지지자들의 숙청입니다."
  CHI_attack_capitalists:0 "자본주의자 공격"
- CHI_attack_capitalists_desc:0 "Capitalist might be a lesser evil compared to leftist ideas but they are still the enemies of China. No citizien should suffer under foreign influence."
+ CHI_attack_capitalists_desc:0 "자본주의는 좌파 사상에 비해 덜 악할지 모르지만 여전히 중국의 적입니다. 시민들은 외국의 영향 아래 고통받아서는 안됩니다."
  CHI_seize_assets:0 "산업 자산 몰수"
- CHI_seize_assets_desc:0 "Too many companies and industrial departments are too independent. The government must seize these facilities so that they have a greater effect on the economy of the state."
+ CHI_seize_assets_desc:0 "너무 많은 기업과 산업부서가 너무 독립적입니다. 정부는 이러한 시설들이 국가의 경제에 더 큰 영향을 미치기 위해 그것들을 몰수해야 합니다."
  CHI_government_controlled_industry:0 "정부가 통제하는 산업"
- CHI_government_controlled_industry_desc:0 "Investors and Capitalist do not strengthen the economy of a country, they weaken it! We shall free our economy from foreign influence and place it under our direct controll."
+ CHI_government_controlled_industry_desc:0 "투자자와 자본가는 한 나라의 경제를 강화시키지 않고, 그것을 약화시킵니다! 우리는 경제를 외국의 영향으로부터 해방시켜 우리의 직접적인 통제하에 둘 것입니다."
  CHI_absolute_controll:0 "권력은 강자의 것이다"
- CHI_absolute_controll_desc:0 "Unnecassary debates. Unrelevant political discussions. Inner politics are stopping the unification of China! The government can only archieve control when their highest ups have the power to shut up the ones that disagree."
- CHI_unite_campaign:0 "제2차 통일 운동"
- CHI_unite_campaign_desc:0 "Almost a whole decade we have waited. But now we can finally begin to unite China. I proclaim the Second Unification Campaign!"
+ CHI_absolute_controll_desc:0 "토론은 필요 없습니다. 정치적 토론은 관련 없습니다. 내부 정치가 중국의 통일을 막고 있습니다! 정부는 그들의 최고위층들이 동의하지 않는 것들을 조용히 시킬 힘을 가질 때만이 통제권을 획득할 수 있습니다."
+ CHI_unite_campaign:0 "제2차 통일운동"
+ CHI_unite_campaign_desc:0 "거의 10년 동안 기다렸습니다. 하지만 이제 우리는 마침내 중국을 통일하기 시작할 수 있습니다. 제2차 통일운동을 선포합니다!"
  CHI_west_warlord:0 "서쪽 군벌"
- CHI_west_warlord_desc:0 "How long did he think he can hide from us? Long Yun has been always rejecting joining the republic due to his greed of power. It is time to put an end to the last warlord."
+ CHI_west_warlord_desc:0 "얼마나 오랫동안 우리에게 숨길 수 있다고 생각했을까요? 롱윤은 권력에 대한 욕심 때문에 입당을 늘 거부해 왔습니다. 이제 마지막 군벌에 종지부를 찍어야 할 때입니다."
  CHI_north_campaign:0 "황제 타도"
- CHI_north_campaign_desc:0 "How long have we waited for this day. When started the Great Campaign in 1923 we were assured victory. But our confidence brought us doom. We were pushed back behinde the river and had to see how our dream shattered. The humiliation felt like eternity but now we have come back. To crush the enemy. To burn the traitors. To relieve China of the curse which had plagued it for centuries."
+ CHI_north_campaign_desc:0 "우리는 얼마나 오랫동안 이 날을 기다렸습니까. 1923년 위대한 운동을 시작했을 때 우리는 승리를 확신했습니다. 하지만 우리의 자신감은 우리에게 파멸을 가져다 주었습니다. 우리는 강 뒤로 밀려났고 우리의 꿈이 어떻게 산산조각이 났는지 봐야만 했습니다. 그 굴욕은 영원처럼 느껴졌지만 이제 우리는 적을 격파하기 위해, 배신자들을 불태우기 위해, 수세기 동안 중국을 괴롭혔던 저주를 덜어주기 위해, 돌아왔습니다."
  CHI_root_out_communist:0 "오지의 쓰레기들"
  CHI_root_out_communist_desc:0 "We should have been more extreme in 1928. Due to the intervention of other political parties we were never able to completly destroy the Communists at Shangai. This time no one will be stopping us."
- CHI_re_manchu:0 "그들을 쫒아내라"
+ CHI_re_manchu:0 "그들을 쫓아내라"
  CHI_re_manchu_desc:0 "It is time for revenge. We will now finally regain Manchuria and give the Japanese the same humiliation they suffered years ago."
  CHI_rebuild:0 "공화국 군대 재건"
  CHI_remilitarize_shangai:0 "상하이 재무장"
@@ -57,7 +57,7 @@
  CHI_kill_opposition_desc:0 "We are now in control of the main government but the Kuomintang are not fully destroyed.They still have members in the miltary and state governments.The only solution we have right now is killing them before they can form a stable oppisition in our country."
  CHI_reinforce_government:0 "정부 강화"
  CHI_reinforce_government_desc:0 "By reinforcing our current communist government we are going to gain more influence."
- CHI_social_demo:0 "사회주의 민주주의"
+ CHI_social_demo:0 "사회주의의 민주주의"
  CHI_social_demo_desc:0 "Our country suffered under dictaturships and monarchies for centuries.To gain more support from our people we should go down a way of freedom rather then full controll."
  CHI_agarian_policy:0 "농업 정책 개혁"
  CHI_agarian_policy_desc:0 "In the last years China has been suffering under famines due to the civil war and the incompetence of the Kuomingtang government.With new reforms in the agarian industry the people of China are finally going to get enough food to live and work."
@@ -131,7 +131,7 @@
  CHI_approach_FRA_desc:0 "France would be a great ally for China.They can help us with modernizing our military."
  CHI_joint_research:0 "연구 협력"
  CHI_joint_research_desc:0 "To improve our weapons,England send militaric scientists to improve our weapons."
- CHI_french_advisors:0 "프랑스 고문"
+ CHI_french_advisors:0 "프랑스 고문단"
  CHI_french_advisors_desc:0 "France promised us advisors to modernize our tactics so that we are more preapered for a war."
  CHI_join_ENG:0 "서부 연합 가입"
  CHI_join_ENG_desc:0 "After formalizing our relations with France and England we should now ask them to join their faction."
@@ -157,7 +157,7 @@
  CHI_infrastructure_desc:0 "The infrastructure was one of the best in world now its considered to be outdated.With a new infrastructure programm we can improve those flaws.But first we should focus on the states of our country which have the worst infrastructure in the west"
  CHI_industrial_effort1:0 "민간경제 깨우기"
  CHI_industrial_effort1_desc:0 "During the factory strikes much of the civilian economy was burnt down.It's time to revive those factories and to give the people work."
- CHI_industrial_effort2:0 "무기 공장 확장"
+ CHI_industrial_effort2:0 "군수공장 확장"
  CHI_industrial_effort2_desc:0 "We have the biggest army in Asia but we do not have enough arms factories to supply it.With new arms factories in the undeveloped states we can finally supply our army with enough equipment."
  CHI_dockyard_effort:0 "해군 산업 시작"
  CHI_dockyard_effort_desc:0 "China had once one of the greastest navies in Asia.Now it has the weakest.But we can rebuild it!With an new dockyard programm we can start building ships again for our glorius country!"
@@ -187,7 +187,7 @@
  CHI_militarian_industry_desc:0 "A good army always needs equipment. A campaign needs a constant influx of infantry, support and artillery equipment."
  CHI_superior_fire:0 "거대한 군대"
  CHI_superior_fire_desc:0 ""
- CHI_inf_equipment:0 "24식"
+ CHI_inf_equipment:0 "24식 소총"
  CHI_inf_equipment_desc:0 "The Type 24 is a new bolt action rifle designed to replace the current Type 88."
  CHI_artillery:0 "포병대"
  CHI_artillery_desc:0 "The backbone of the army is always artillery. The better the artillery, the less enemy soldiers our infantry has to fight."
@@ -247,7 +247,7 @@
  CHI_support_desc:0 "Our wars will be based on using the Initiative and managing attrition. Support Companies greatly decrease our problems."
  CHI_motorized:0 "미제 트럭"
  CHI_motorized_desc:0 "Ford has been always fond of selling trucks into warzones. While the price is high with the first supplyment of trucks we might be able to set up a motorized army."
- CHI_left:0 "꿈이 승리하다"
+ CHI_left:0 "꿈이 승리한다"
  CHI_left_desc:0 ""
  CHI_trial_the_military:0 "군부 조사"
  CHI_trial_the_military_desc:0 "While most of the party is convinced about our plans, the military is not. There still a lot of friends of Chiang inside in the military which possess his views. We must survey the military for potential traitors."
@@ -287,7 +287,7 @@
  CHI_demand_desc:0 "Russian Influence in Asia stops here!"
  CHI_western_support:0 "서방의 지원"
  CHI_western_support_desc:0 "The Western world is eager to help us in this conflict against Russia."
- CHI_our_lands:0 "북부는 러시아 땅이 아니다"
+ CHI_our_lands:0 "북부는 러시아땅이 아니다"
  CHI_our_lands_desc:0 "The Russian Manchurian puppet has no real legitimacy and is a tool of oppression. The Russian must disband it and give the land to us!"
  CHI_new_problem:0 "시골 처리"
  CHI_new_problem_desc:0 "Chiang has been planning a military campaign to reestablish control over the countryside to regain a lot of the agricultural production. Military forces will conduct terror campaigns to search for any known rebel groups, warlords and traitors. This will be enourmous and expensive effort but after this the whole agricultural industry will be in our hands again."
