--- a/localisation/chi_ideas_l_english.yml
+++ b/localisation/chi_ideas_l_english.yml
@@ -25,7 +25,7 @@
  CHI_special_forces:0 "특수부대"
  CHI_destribute_land:0 "분배된 토지"
  CHI_colony_payment:0 "토지 대금"
- CHI_so_demo:0 "사회주의 민주주의"
+ CHI_so_demo:0 "사회주의의 민주주의"
  CHI_se_police:0 "더 나은 지원군"
  CHI_anti_co:0 "반공 통치"
  CHI_reinforced_gov:0 "신정부"
