--- a/localisation/grk_focus_l_english.yml
+++ b/localisation/grk_focus_l_english.yml
@@ -1,4 +1,4 @@
-l_english:
+﻿l_english:
   GRK_industry:0 "민간 공장 개선"
   GRK_industry_desc:0 "독일 해체 이후 우리 산업은 엄청난 고통을 겪었습니다. 시계처럼 정교히 생산되도록 맞춰진 체계가 지금 난장판입니다. 버려진 공장을 복원하고 기존 공장에 보조금을 지급해야 합니다."
   GRK_recover_civil_war:0 "내전으로부터의 회복"
