--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -109,19 +109,19 @@
  AUS_socialist_party_long:0 "오스트리아 사회민주당"
 
  CHI_communism_party:0 "공산주의 반군"
- CHI_communism_party_long:0 "The Communist Underground\n§g After the Shangai Massacre where thousands of support of the CPC where killed, the communist party was supressed in the entire Republic. Every member of the party or supporter would be hunted down to their death by republican forces. The Main forces of the CPC undertook the long march and flew to the western mouintans of China. The last communist supporters in the republic are hidding and consist only of a handful of people."
+ CHI_communism_party_long:0 "공산주의 지하세력\n§g 수천 명의 공산당원들이 살해된 상하이 대학살 이후 공산당은 공화국 전체에서 억압당했습니다. 그 당의 모든 구성원이나 지지자들은 공화주의 세력에 의해 죽을 때까지 쫓길 것입니다. 공산당의 주요 세력은 긴 행진에 착수하여 중국의 서쪽 산악으로 도피했습니다. 공화국의 마지막 공산주의 지지자들은 지하에 숨어 소수의 사람들로만 구성되어 있습니다."
  CHI_communism_party_reborn:0 "CPC"
  CHI_communism_party_reborn_long:0 "중국 공산당"
  CHI_democratic_party:0 "국민당 좌파"
- CHI_democratic_party_long:0 "Left Wing of the Kuomintang\n§g While the Kuomintang rules over the republic it itself is not united. The left wing of Kuomintang is fighting for survival and try to keep Sun Yat-sen's ideals alive. However the constant clashes with the current ruling right wing over the strategic politics in China and the often accusations by the military blaming them to work with Communist put them in a unfavorable spot. But currently they are the only party recognizing the threat of the Japanese."
+ CHI_democratic_party_long:0 "국민당 좌파\n§g 국민당이 공화국을 통치하는 동안 국민당은 통합되지 않습니다. 국민당의 좌익은 생존을 위해 싸우고 있으며 쑨원의 이상을 살려두려고 노력하고 있습니다. 그러나 중국의 전략 정치를 둘러싸고 현 집권 우파와의 끊임없는 충돌과 종종 그들을 공산주의자들과 함께 일한다고 비난하는 군부의 비난은 그들을 불리한 위치에 놓이게 했습니다. 하지만 현재 그들은 일본인들의 위협을 인정하는 유일한 정당입니다."
  CHI_fascism_party:0 "NGROC"
- CHI_fascism_party_long:0 "National Government of the Republic of China\n§g"
+ CHI_fascism_party_long:0 "중화민국 국민정부\n§g"
  CHI_neutrality_party:0 "국민당 군부"
- CHI_neutrality_party_long:0 "Military Wing of the Kuomintang\n§g Chiang Kai Shek is one of the most influential members of the Kuomintang. When the North Expedition was ongoing it appeared that Chiang would become the chairman. But after failure of the campaign, Hu Hamnin was elected the new Chairsman. Those two humiliations still did not stop Chiang Kai Shek and he continued being a member of the Kuomintang and commander of the army. It is clear that if Hanmin would lose his position most of the conservative members would vote for him as a new chairman."
- CHI_socialist_party:0 "Zhōngguó Shèhuìdang"
- CHI_socialist_party_long:0 "Zhōngguó Shèhuìdang\n§g"
+ CHI_neutrality_party_long:0 "국민당 군부\n§g 장제스는 국민당의 가장 영향력 있는 구성원 중 한 명입니다. 북벌이 진행 중일 때 장제스가 의장이 될 것 같았습니다. 그러나 운동의 실패 후, 후한민은 새로운 의장로 선출되었습니다. 그 두 번의 굴욕은 여전히 장제스를 막지 못했고 그는 계속해서 국민당의 일원이자 군 지휘관으로 있었습니다. 만약 후한민이 자리를 잃게 된다면 대부분의 보수당원들이 신임 의장으로서 장제스를 뽑을 것이 분명합니다."
+ CHI_socialist_party:0 "중국 사회당"
+ CHI_socialist_party_long:0 "중국 사회당\n§g"
  CHI_conservatives_party:0 "국민당 우파"
- CHI_conservatives_party_long:0 "Right Wing of the Kuomintang\n§g The right wing is comprised of conservatives, reactionaries and nationalists. The right wing is currently lead by Hu Hanmin. Hanmin has done a good job at keeping the right wing in power and keeping the different views of the wing themself together. But it is unclear what will happen with the right wing if he would lose this position. Nationalists and Reactionaries would propably join the Chiang Kai Shek while the rest might allign with more liberal positions to oppose the aggressive stance of Chiang."
+ CHI_conservatives_party_long:0 "국민당 우파\n§g 우파는 보수주의자, 반동주의자, 민족주의자들로 구성되어 있습니다. 우익은 현재 후한민이 이끌고 있습니다. 한민은 우파 세력을 유지하며, 우파의 다양한 시각을 함께 지켜내는 데 큰 공을 세웠습니다. 그러나 만약 그가 이 자리를 잃게 된다면 우익이 어떻게 될지는 미지수입니다. 민족주의자들과 반동주의자들은 예상대로 장제스와 함께할 것이고 나머지는 장제스의 공격적인 입장에 반대하기 위해 더 많은 자유주의적인 입장을 취할 것입니다."
 
  XSM_neutrality_party:0 "마가군벌"
 
@@ -455,21 +455,21 @@
  YEM_neutrality_party:0 "House of Rassid"
  OMA_neutrality_party:0 "Al Said Dynasty"
  SIK_communism_party:0 "CCP"
- SIK_communism_party_long:0 "Communist Party of the China"
- SIK_neutrality_party:0 "Xinjiang Clique"
+ SIK_communism_party_long:0 "중국 공산당"
+ SIK_neutrality_party:0 "신장 군벌"
  SIK_conservatives_party:0 "BS"
- SIK_conservatives_party_desc:0 "Beijing Supporters"
+ SIK_conservatives_party_desc:0 "베이징 지지자"
  SIK_democratic_party:0 "KMT"
- SIK_democratic_party_desc:0 "Kuomintang Supporters"
+ SIK_democratic_party_desc:0 "국민당 지지자"
  SIK_socialist_party:0 "KMT"
- SIK_socialist_party_desc:0 "Kuomintang Supporters"
- SIK_fascism_party:0 "Uyghur Nationalists"
+ SIK_socialist_party_desc:0 "국민당 지지자"
+ SIK_fascism_party:0 "위구르 국가주의자"
  TIB_neutrality_party:0 "Retting Rinpoche"
- YUN_neutrality_party:0 "Kuomintang"
+ YUN_neutrality_party:0 "국민당"
  MON_communism_party:0 "MAN"
- MON_communism_party_long:0 "Mongol Ardiin Nam"
+ MON_communism_party_long:0 "몽골 인민당"
  TAN_communism_party:0 "CPSU"
- TAN_communism_party_long:0 "Communist Party of the Soviet Union"
+ TAN_communism_party_long:0 "소비에트 연방 공산당"
  PAR_communism_party:0 "PRF"
  PAR_communism_party_long:0 "Partido Revolucionario Febrerista"
  CUB_democratic_party:0 "Union"
@@ -488,13 +488,13 @@
  KOR_neutrality_party:0 "이씨 왕조"
  KOR_fascism_party:0 "NDPC"
  KOR_fascism_party_long:0 "국방정책위원회"
- ICE_democratic_party:0 "Progress Party"
+ ICE_democratic_party:0 "진보당"
  ICE_communism_party:0 "People's Unity Party"
- ICE_fascism_party:0 "Nationalist Party"
- ICE_neutrality_party:0 "Independence Party"
+ ICE_fascism_party:0 "국가당"
+ ICE_neutrality_party:0 "독립당"
  SYR_fascism_party:0 "SSNP"
  SYR_fascism_party_long:0 "Syrian Social Nationalist Party"
- SYR_communism_party:0 "Syrian Communist Party"
+ SYR_communism_party:0 "시리아 공산당"
  SYR_democratic_party:0 "National Bloc"
  SYR_neutrality_party:0 "Royalists"
  LEB_fascism_party:0 "Kataeb"
