--- a/localisation/usa_focus_l_english.yml
+++ b/localisation/usa_focus_l_english.yml
@@ -174,7 +174,7 @@
  US_ace_pilots:0 "에이스 훈련 시설"
  US_ace_pilots_desc:0 "만약 우리가 하늘을 나는 에이스를 얻으려면, 그들은 전문적인 훈련을 필요로 합니다."
  US_increase_fighter_production:0 "증가된 전투기 생산"
- US_increase_fighter_production_desc:0 우리 전투기의 선형화로, 우리는 거의 들어보지 못한 속도로 그것들을 대량 생산할 수 있습니다."
+ US_increase_fighter_production_desc:0 "우리 전투기의 선형화로, 우리는 거의 들어보지 못한 속도로 그것들을 대량 생산할 수 있습니다."
  US_increase_funds:0 "인상된 군대 투자"
  US_increase_funds_desc:0 "육군은 몇 년 동안 자금이 부족했고, 미래에 우리를 방어하기 위해서는 더 많은 자금이 필요합니다."
  US_federalize_guard:0 "주 방위군 연방화"
