--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -667,8 +667,8 @@
  CAN_conservatives_ADJ:0 "캐나다"
  CAN_socialist_ADJ:0 "캐나다"
 
- CHI_fascism:0 "청"
- CHI_fascism_DEF:0 "청"
+ CHI_fascism:0 "청나라"
+ CHI_fascism_DEF:0 "청나라"
  CHI_democratic:0 "중화민국"
  CHI_democratic_DEF:0 "중화민국"
  CHI_conservatives:0 "중화민국"
@@ -686,8 +686,8 @@
  CHI_socialist_ADJ:0 "중국"
  CHI_conservatives_ADJ:0 "중국"
 
- CHC_fascism:0 "청"
- CHC_fascism_DEF:0 "청"
+ CHC_fascism:0 "청나라"
+ CHC_fascism_DEF:0 "청나라"
  CHC_democratic:0 "중화민국"
  CHC_democratic_DEF:0 "중화민국"
  CHC_conservatives:0 "중화민국"
@@ -1240,8 +1240,8 @@
  SHX_fascism_DEF:0 "국가주의 중국"
  SHX_democratic:0 "중화민국"
  SHX_democratic_DEF:0 "중화민국"
- SHX_neutrality:0 "청"
- SHX_neutrality_DEF:0 "청"
+ SHX_neutrality:0 "청나라"
+ SHX_neutrality_DEF:0 "청나라"
  SHX_communism:0 "중화인민공화국"
  SHX_communism_DEF:0 "중화인민공화국"
  SHX_fascism_ADJ:0 "중국"
@@ -1681,8 +1681,8 @@
  BOT_democratic_ADJ:0 "보츠와나"
  BOT_neutrality_ADJ:0 "보츠와나"
  BOT_communism_ADJ:0 "보츠와나"
- MAN_fascism:0 "만주 제국"
- MAN_fascism_DEF:0 "만주 제국"
+ MAN_fascism:0 "만주제국"
+ MAN_fascism_DEF:0 "만주제국"
  MAN_democratic:0 "만주 공화국"
  MAN_democratic_DEF:0 "만주 공화국"
  MAN_neutrality:0 "봉천 군벌"
@@ -3101,8 +3101,8 @@ AUS_austria_hungary_fascism_DEF:0 "오스트리아국"
  QNG_fascism_DEF:0 "국가주의 중국"
  QNG_democratic:0 "중화민국"
  QNG_democratic_DEF:0 "중화민국"
- QNG_neutrality:0 "청"
- QNG_neutrality_DEF:0 "청"
+ QNG_neutrality:0 "청나라"
+ QNG_neutrality_DEF:0 "청나라"
  QNG_communism:0 "중화인민공화국"
  QNG_communism_DEF:0 "중화인민공화국"
  QNG_fascism_ADJ:0 "중국"
